package ar.edu.utn.frba.dds.Model.EntidadesEstablecimientosServicios;

public enum TipoDeControlador {
  ENTIDAD_PRESTADORA,
  ORGANISMO_CONTROL
}
